# document-processor

./: .gitignore  CONTRIBUTING.md  Dockerfile  Procfile  README.md  config.py  document.py  main.py  metadata.py  pyproject.toml  requirements.txt  run_dev.sh  smart.py
.github/workflows/: deploy.yml
infra/k8s/: managed-cert.yml  theia-deploy.yml  theia-ingress.yml  theia-service.yml
infra/terraform/: main.tf
src/theia/: main.py
src/theia/document/: processor.py
src/theia/drive/: client.py
src/theia/utils/: filters.py
theia/: gunicorn.conf.py  main.py  run_dev.sh
theia/document/: processor.py  test_processor.py
theia/drive/: client.py  client_test.py  directory.json  test_client.py
theia/drive/templates/: submission.html
theia/models/: ORS Sites and Stewards (2017-Present_2023) - ORS Oyster Info - Updated 2_14_23.csv  metadata.py
theia/settings/: config.py
theia/tasks/: .~lock.broodstock.csv#  broodstock.csv  cage.py  document.py  drive.py  fields.py  job.py  measurements.py  metadata.py  storage.py
theia/utils/: filters.py
theia/web/: __init__.py  app.py  forms.py  middleware.py  utils.py
theia/web/models/: metadata.py
theia/web/templates/: base.html  dashboard.html  form.html  index.html  result.html
theia/web/views/: admin.py  auth.py  dashboard.py  form.py  location.csv  terms.py
theia/web/views/templates/: admin-add-user.html  admin-delete-user.html  admin.html  base.html  dashboard.html  form.html  index.html  privacy.html  result.html
